# GTMesh

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  build_and_test.sh
Documentation/Examples/: CMakeLists.txt
Documentation/Examples/BinarySerializer/: BinarySerializerExample.cpp
Documentation/Examples/Debug/: CMakeLists.txt  DebugExample.cpp
Documentation/Examples/UnstructuredMesh/: MeshFPMALoadExample.cpp  meshFile.fpma
Documentation/Examples/UnstructuredMesh/MeshDataContainer/: MeshDataContainerExample.cpp
Macros/: MacroForEach.h
MultiphaseFlow/: MultiphaseFlow.pro  main.cpp  multiphaseflow.cpp  multiphaseflow.h
TemplateTest/: TemplateTest.pro  main.cpp
Unstructured_mesh/: CellBoundaryConnection.h  CellConnection.h  ComputationalySignificantElement.h  MeshDataContainer.h  MeshElement.h  MeshFunctions.h  MeshNativeType.h  MeshReader.h  MeshWriter.h  UnstructuredMesh.h  Unstructured_mesh.pro  VTKMeshReader.h  VTKMeshWriter.h  Vector.h  Vertex.h  cellboundaryconnection.h  cellconnection.h  computationaly_significant_element.h  inline_array_operations.h  main.cpp  mesh_element.h  mesh_functions.h  meshdatacontainer.h  multiphaseflow.cpp  multiphaseflow.h  unstructed_mesh_define.h  unstructuredmesh.h  vector.h  vertex.h
Unstructured_mesh/UnstructuredMesh/MeshDataContainer/: MemberApproach.h  MeshDataContainer.h  Singleton.h  Traits.h
debug/: ConsoleLogger.h  Debug.h  HTMLLogger.h  VariableExport.h  consolelogger.h  debug.cpp  debug.h  htmllogger.h
examples/: CMakeLists.txt
examples/BinarySerializer/: CMakeLists.txt
examples/Debug/: DebugBasedOnInterface.cpp  DebugNewTypeExample.cpp
examples/HeatConduction/: CMakeLists.txt  HeatConductionSimple.cpp
examples/UnstructuredMesh/: CMakeLists.txt  MeshDataIO.cpp  MeshFPMALoadExample.cpp  MeshFunctionsExample.cpp  MeshProperties.cpp
src/: CMakeLists.txt
src/Debug/: CSVLogger.h  ConsoleLogger.h  Debug.h  HTMLLogger.h  JSONLogger.h  README.md  VariableExport.h
src/GTMesh/BinarySerializer/: BinarySerializer.h
src/GTMesh/BinarySerializer/Serializers/: SerializeCompactContainer.h  SerializeCustom.h  SerializeIndexable.h  SerializeIterable.h  SerializeSimple.h  SerializeTraitedClass.h  SerializeTuple.h
src/GTMesh/Debug/: ConsoleLogger.h  Debug.h  JSONLogger.h  README.md  VariableExport.h
src/GTMesh/Debug/Printers/: PrintAny.h  PrintCustom.h  PrintExportable.h  PrintIndexable.h  PrintIterable.h  PrintText.h  PrintTraitedClass.h  PrintTuple.h  Printers.h
src/GTMesh/Macros/: MacroForEach.h
src/GTMesh/NumericStaticArray/: GramSchmidt.h  Vertex.h
src/GTMesh/Traits/: CustomTypeTraits.h  FunctionTraits.h  README.md  Traits.h
src/GTMesh/Traits/Interfaces/: InterfaceCompact.h  InterfaceCompactContainer.h  InterfaceIndexable.h
src/GTMesh/Traits/MemberAccess/: AccessType.h  GetSetAccess.h  MemberAccess.h
src/GTMesh/Traits/TraitsAlgorithm/: TraitsAlgorithm.h
src/GTMesh/Traits/TraitsBind/: TraitsBind.h
src/GTMesh/UnstructuredMesh/: UnstructuredMesh.h  UnstructuredMeshDefine.h
src/GTMesh/UnstructuredMesh/MeshDataContainer/: MeshDataContainer.h
src/GTMesh/UnstructuredMesh/MeshDataContainer/MeshDataContainerTraits/: MeshDataContainerArithmeticTraits.h  MeshDataContainerIOTraits.h  MeshDataContainerTraits.h
src/GTMesh/UnstructuredMesh/MeshDataContainer/MeshDataIO/: VTKMeshDataReader.h  VTKMeshDataWriter.h
src/GTMesh/UnstructuredMesh/MeshElements/: CellBoundaryConnection.h  CellConnection.h  ElementIndex.hpp  MeshElement.h  MeshElements.h
src/GTMesh/UnstructuredMesh/MeshFunctions/: CellsDistance.h  ComputeCellsCenterDifference.h  ComputeMeasures.h  ComputeNormals.h  GetCenters.h  MeshApply.h  MeshColoring.h  MeshConnections.h  MeshFunctions.h  MeshNeighborhood.h
src/GTMesh/UnstructuredMesh/MeshIO/: MeshNativeType.h
src/GTMesh/UnstructuredMesh/MeshIO/MeshReader/: FPMAMeshReader.h  MeshReader.h  VTKMeshReader.h
src/GTMesh/UnstructuredMesh/MeshIO/MeshWriter/: FPMAMeshWriter.h
src/GTMesh/Utils/: ClassSelector.h  ConstexprFor.h
src/Macros/: MacroForEach.h
src/NumericStaticArray/: GrammSchmidt.h  InlineArrayOperations.h  Vector.h  Vertex.h
src/Traits/: CustomTypeTraits.h  Traits.h
src/Traits/MemberAccess/: MemberAccess.h
src/Traits/MemberApproach/: MemberApproach.h
src/Traits/TraitsAlgorithm/: README.md  TraitsAlgorithm.h
src/UnitTests/: CMakeLists.txt  DummyTest.cpp  DummyTestFail.cpp  GtestMissingError.h  MyTest.cpp  README.md  main.h
src/UnitTests/BinarySerializer/: BinarySerializerTest.cpp
src/UnitTests/Debug/: CMakeLists.txt  DBGVAR_JSONTest.cpp  VariableExportTest.cpp
src/UnitTests/Traits/: ArithmeticTraitsTest.cpp  TraitsTest.cpp
src/UnitTests/UnstructuredMesh/: CMakeLists.txt  MeshDataContainerTest.cpp  MeshSetup.h  UnstructuredMeshTest.cpp
src/UnitTests/cmake/: BuildGtest.cmake  Gtest.cmake.in
src/UnstructuredMesh/: UnstructuredMesh.h  UnstructuredMeshDefine.h
src/UnstructuredMesh/MeshDataContainer/: MeshDataContainer.h  Traits.h
src/UnstructuredMesh/MeshDataContainer/MeshDataIO/: VTKMeshDataReader.h  VTKMeshDataWriter.h
src/UnstructuredMesh/MeshElements/: CellBoundaryConnection.h  CellConnection.h  ComputationalySignificantElement.h  MeshElement.h  MeshElements.h
src/UnstructuredMesh/MeshFunctions/: CellsDistance.h  ComputeCenter.h  ComputeCenters.h  ComputeMeasures.h  ComputeNormals.h  EdgeOrientation.h  EdgesOrientation.h  GrammSchmidt.h  MeshApply.h  MeshColoring.h  MeshColouring.h  MeshConnections.h  MeshFunctions.h  MeshFunctionsDefine.h  MeshNeighborhood.h  README.md
src/UnstructuredMesh/MeshIO/: MeshNativeType.h
src/UnstructuredMesh/MeshIO/MeshReader/: FPMAMeshReader.h  MeshReader.h  VTKMeshReader.h
src/UnstructuredMesh/MeshIO/MeshWriter/: FPMAMeshWriter.h  MeshWriter.h  VTKMeshWriter.h
tests/: CMakeLists.txt  README.md
tests/BinarySerializer/: BinarySerializerTest.cpp  CMakeLists.txt
tests/Debug/: DBGVAR_JSONTest.cpp  VariableExportTest.cpp
tests/Traits/: ArithmeticTraitsTest.cpp  CMakeLists.txt  TraitsTest.cpp
tests/UnstructuredMesh/: MeshDataContainerTest.cpp  MeshSetup.h  UnstructuredMeshTest.cpp
tests/cmake/: Gtest.cmake.in
(+11 files in other folders)
