# add all subdirectories of in the current one
#ADD_SUBDIRECTORY( Communicators )

ADD_EXECUTABLE( DummyTest DummyTest.cpp )
TARGET_COMPILE_OPTIONS( DummyTest PRIVATE ${CXX_TESTS_FLAGS} )
TARGET_LINK_LIBRARIES( DummyTest ${GTEST_BOTH_LIBRARIES} )

ADD_EXECUTABLE( DummyTestFail DummyTestFail.cpp )
TARGET_COMPILE_OPTIONS( DummyTestFail PRIVATE ${CXX_TESTS_FLAGS} )
TARGET_LINK_LIBRARIES( DummyTestFail ${GTEST_BOTH_LIBRARIES} )


# Specify a cuda test
# if( BUILD_CUDA )
#    CUDA_ADD_EXECUTABLE( AllocatorsTest AllocatorsTest.cu OPTIONS ${CXX_TESTS_FLAGS} )
#    TARGET_LINK_LIBRARIES( AllocatorsTest ${GTEST_BOTH_LIBRARIES} )
# else()
#    ADD_EXECUTABLE( AllocatorsTest AllocatorsTest.cpp )
#    TARGET_COMPILE_OPTIONS( AllocatorsTest PRIVATE ${CXX_TESTS_FLAGS} )
#    TARGET_LINK_LIBRARIES( AllocatorsTest ${GTEST_BOTH_LIBRARIES} )
# endif()

ADD_TEST( DummyTest ${EXECUTABLE_OUTPUT_PATH}/DummyTest${CMAKE_EXECUTABLE_SUFFIX} )
ADD_TEST( DummyTestFail ${EXECUTABLE_OUTPUT_PATH}/DummyTestFail${CMAKE_EXECUTABLE_SUFFIX} )


# Add the tests
# ADD_TEST( AllocatorsTest ${EXECUTABLE_OUTPUT_PATH}/AllocatorsTest${CMAKE_EXECUTABLE_SUFFIX} )
# ADD_TEST( FileTest ${EXECUTABLE_OUTPUT_PATH}/FileTest${CMAKE_EXECUTABLE_SUFFIX} )
# ADD_TEST( StringTest ${EXECUTABLE_OUTPUT_PATH}/StringTest${CMAKE_EXECUTABLE_SUFFIX} )
# ADD_TEST( ObjectTest ${EXECUTABLE_OUTPUT_PATH}/ObjectTest${CMAKE_EXECUTABLE_SUFFIX} )
# ADD_TEST( TimerTest ${EXECUTABLE_OUTPUT_PATH}/TimerTest${CMAKE_EXECUTABLE_SUFFIX} )
# ADD_TEST( TypeInfoTest ${EXECUTABLE_OUTPUT_PATH}/TypeInfoTest${CMAKE_EXECUTABLE_SUFFIX} )
